--- a/sass/_administration.scss
+++ b/sass/_administration.scss
@@ -357,3 +357,359 @@
         }
     }
 }
+
+#adm_content_dictionaries{
+    .dico_main_container{
+        position: relative;
+        .dico_step1{
+            .dico_form{
+                padding: 15px;
+                background: white;
+                border: 2px solid #3b73b9;
+                border-radius: 5px;
+                width: 426px;
+                &.error{
+                    border: 2px solid red;
+                }
+                .error_form_text{
+                    color: red;
+                    font-weight: bold;
+                    text-align: center;
+                    margin-top: 20px;
+                    margin-bottom: -10px;
+                }
+                .line_dico_form{                    
+                    margin-bottom:10px;
+                    span{
+                        display: inline-block;
+                        font-weight: bold;
+                        margin-right: 15px;
+                        width: 150px;
+                    }
+                }
+                .bt_send_dico_form{
+                    text-align: center;
+                    width: 180px;
+                    background: #3b73b9;
+                    color: white;
+                    padding: 2px;
+                    box-shadow: 1px 1px 1px black;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    margin-top: 20px;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+                select{
+                    width: 226px;
+                    height: 22px;
+                    margin-left: -4px;
+                }
+                input{
+                    width: 226px;
+                    height: 22px;
+                }
+            }
+        }
+        .dico_step2{
+            display:none;
+            .title{}
+            .subtitle{
+                background: #3b73b929;
+                padding: 10px;
+                font-size: 14px;
+                font-style: italic;
+            }
+            .create_new_dico{
+                 text-align: center;
+                width: 180px;
+                background: #3bb985;
+                color: white;
+                padding: 2px;
+                box-shadow: 1px 1px 1px black;
+                border-radius: 5px;
+                cursor: pointer;
+                margin-top: 20px;
+                display:inline-block;
+                vertical-align:top;
+            }
+            .cancel_new_dico{
+                text-align: center;
+                width: 180px;
+                background: #b93b3bb5;
+                color: white;
+                padding: 2px;
+                box-shadow: 1px 1px 1px black;
+                border-radius: 5px;
+                cursor: pointer;
+                margin-top: 20px;
+                display:inline-block;
+                vertical-align:top;
+            }
+            .presentation{
+                background: #3bb95040;
+                padding: 10px;
+                color: black;
+                margin-top: 25px;
+                font-size: 18px;
+            }
+            .dico_type_selector{
+                .type-entry{
+                    display: inline-block;
+                    vertical-align: top;
+                    width: 175px;
+                    text-align: center;
+                    margin:7px;
+                    padding:5px;
+                    cursor:pointer;
+                    background: #cecece;
+                    margin-bottom:0px;
+                    &:first-child{
+                        margin-left:0;
+                    }
+                    &.selected{
+                        background: #3b73b9d9;
+                        color: white;
+                    }
+                }
+            }
+            .dictionary_type_listing{
+                display:none;
+                border: 2px solid #3b73b9d9;
+                padding: 10px;
+                .header_new_dico{
+                    .td_head{
+                        background: #5b6f88;
+                        display: inline-block;
+                        vertical-align: top;
+                        width: 90px;
+                        text-align: center;
+                        border-right: 1px solid white;
+                        color: white;
+                        padding: 1px;
+                        margin-right: -3px;
+                        font-size: 14px;
+                        &.description{
+                            width: 220px;
+                        }                        
+                    }
+                }
+                .content_new_dico{
+                    .line_new_dico{
+                        width: 1131px;
+                        height: 36px;
+                        overflow: hidden;
+                        
+                        &:nth-child(even) {
+                            background-color:#cde1f0;
+                        }
+                        &.updated_state{
+                            background:#fff70040;
+                        }
+                        &.created_state{
+                            background:#52fd5269;
+                        }
+                        .td_dico{
+                            display: inline-block;
+                            vertical-align: top;
+                            width: 90px;
+                            text-align: center;
+                            border-right: 1px solid white;
+                            padding: 1px;
+                            margin-right: 1px;
+                            font-size: 14px;
+                            padding-top: 8px;
+                            img{
+                                width: 22px;
+                                margin-top: -3px;
+                            }                        
+                            &.description{
+                                width: 220px;
+                            }
+                            &.photo_link{   
+                                padding-top: 4px;
+                                img{
+                                    width: 50px;
+                                }
+                            }
+                            &.can_info{
+                                cursor:help;
+                            }
+                            &.action{
+                                cursor:pointer;
+                            }
+                        }
+                    }
+                }
+                &.joystick-type, &.display-type{
+                    .content_new_dico{
+                        .line_new_dico{
+                            width: 767px;
+                        }
+                    }
+                }
+                .add_new_entry{
+                    text-align: center;
+                    width: 180px;
+                    background: #3bb985;
+                    color: white;
+                    padding: 2px;
+                    box-shadow: 1px 1px 1px black;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    margin-top: 5px;
+                    margin-bottom: 15px;
+                    display: inline-block;
+                    vertical-align: top;
+                    &.disp, &.joy{
+                        width: 250px;
+                    }
+                    img{
+                        display: inline-block;
+                        vertical-align: middle;
+                        width: 17px;
+                        margin-left: 12px;
+                        margin-top: -3px;
+                    }
+                }
+            }
+        }
+        .overlay_form{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background: #000000ab;
+        }
+        .formulaire_update_button, .formulaire_create_button, .formulaire_update_joystick{
+            background: #d6e4f5fa;
+            border: 2px solid black;
+            border-radius: 5px;
+            padding: 15px;
+            width: 900px;
+            margin-bottom: 30px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 18px;
+            display:none;
+            .title{
+                font-size: 25px;
+                margin-top: 20px;
+                margin-bottom: 25px;
+                text-align:center;
+                img{
+                    display: inline-block;
+                    vertical-align: middle;
+                    width: 50px;
+                    border: 2px solid white;
+                }
+            }
+            .tooltip_form{
+                position:relative;
+                .text_explain{
+                    position: absolute;
+                    background: white;
+                    width: 200px;
+                    left: 35px;
+                    border: 2px solid #91dfab;
+                    border-radius: 5px;
+                    padding: 5px;
+                    z-index: 9999;
+                    left: 30px;
+                    top: -59px;
+                    font-style: italic;
+                    font-size: 14px;
+                }
+            }
+            .form_ctn{
+                .global_info, .can_info, .led_info{
+                    background: #ffffff94;
+                    position: relative;
+                    padding: 20px;
+                    border-top: 2px solid #3b73b9;
+                    margin-top:30px;
+                    .title_b{
+                        position: absolute;
+                        top: -24px;
+                        font-style: italic;
+                        color: #3b73b9;
+                        font-weight: bold;
+                        font-size: 19px;
+                        left: 0;
+                    }
+                    .left{
+                        width: 48%;
+                        display: inline-block;
+                        vertical-align: top; 
+                        
+                    }
+                    .right{
+                        width: 48%;
+                        display: inline-block;
+                        vertical-align: top;
+                    }
+                    .line_form{
+                        margin-bottom: 15px;
+                        .text{
+                            display: inline-block;
+                            vertical-align: top;
+                            width: 130px;
+                            font-weight: bold;
+                        }
+                        input{
+                            width: 200px;
+                            height: 22px;
+                        }
+                        .select_large{
+                            width: 200px;
+                            height: 22px;
+                        }
+                        .tooltip_form{
+                            display: inline-block;
+                            vertical-align: top;
+                            margin-left: 5px;
+                            img{
+                                width: 20px;
+                                display: inline-block;
+                                vertical-align: top;
+                                margin-top: -8px; 
+                            }
+                            .text_explain{
+                                display:none;
+                            }
+                        }
+                    }
+                }
+            }
+            .button_ctn{
+                margin-top: 15px;
+                text-align: center;
+            }
+            .update_bt, .create_bt{
+                display: inline-block;
+                vertical-align: top;
+                width: 150px;
+                background: #209420a6;
+                color: white;
+                text-align: center;
+                border: 5px;
+                cursor: pointer;
+                box-shadow: 1px 1px 1px black;
+                padding: 5px;
+                margin-right: 15px;
+            }
+            .cancel_bt{
+                display: inline-block;
+                vertical-align: top;
+                width: 150px;
+                background: #942020a6;
+                color: white;
+                text-align: center;
+                border: 5px;
+                cursor: pointer;
+                box-shadow: 1px 1px 1px black;
+                padding: 5px;
+            }
+        }
+    }
+}
