--- a/template/engineering/toolbox.html
+++ b/template/engineering/toolbox.html
@@ -1,6 +1,11 @@
 <div class="section_container">
     <div class="title title_main">Toolbox</div>
-    
+    <div class="loading_inge hidden">
+        <div class="content">
+            <img src="images/icon_inprogress.gif">
+            <div class="text">Please wait while TSUI reboots...</div>
+        </div>
+    </div>
     <div class='container_toolbox_bt'>
         <button id="dialog-link-diagnostic" class="ui-button ui-corner-all ui-widget selected">
             <img src='images/diagno.png'><br>
@@ -220,6 +225,7 @@
                 </div>
                 <div class="tssc hw_signal_command_container bloc_container_zone hidden">
                     <div class="name_container">TSSC HARDWARE SIGNALS COMMAND</div>
+                    <div class="line_cmd"><span class="name">LAT+LONG_LOCK_ON</span><span class="switch_hw" data-on="DT" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
                     <div class="line_cmd"><span class="name">LAT_LOCK_ON</span><span class="switch_hw" data-on="DT" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
                     <div class="line_cmd"><span class="name">LONG_LOCK_ON</span><span class="switch_hw" data-on="DR" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
                     <div class="line_cmd"><span class="name">ROTATION_LOCK_ON</span><span class="switch_hw" data-on="DQ" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
