--- a/sass/_toolbox.scss
+++ b/sass/_toolbox.scss
@@ -9,6 +9,31 @@
     cursor: pointer;
     font-weight: bold;
 }
+#content_toolbox{
+    position:relative;
+}
+
+.loading_inge{
+    
+    position: absolute;
+    left: -77px;
+    top: 0;
+    background: #ffffffe0;
+    width: 118%;
+    height: 922px;
+    z-index: 999;
+    .content{
+        margin-left: auto;
+        margin-right: auto;
+        width: 300px;
+        text-align: center;
+        margin-top: 150px;
+        .text{
+            font-size: 23px;
+            margin-top: 30px;
+        }
+    }
+}
 
 .ui-dialog.success-dialog {
     border: 2px solid #3b73b9;
