--- a/template/engineering/toolbox.html
+++ b/template/engineering/toolbox.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="tssc hw_signal_command_container bloc_container_zone hidden">
                     <div class="name_container">TSSC HARDWARE SIGNALS COMMAND</div>
-                    <div class="line_cmd"><span class="name">LAT+LONG_LOCK_ON</span><span class="switch_hw" data-on="DT" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
+                    <div class="line_cmd"><span class="name">LAT+LONG_LOCK_ON</span><span class="switch_hw" data-on="DV" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
                     <div class="line_cmd"><span class="name">LAT_LOCK_ON</span><span class="switch_hw" data-on="DT" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
                     <div class="line_cmd"><span class="name">LONG_LOCK_ON</span><span class="switch_hw" data-on="DR" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
                     <div class="line_cmd"><span class="name">ROTATION_LOCK_ON</span><span class="switch_hw" data-on="DQ" data-off="DP">On/Off: <img src="images/switch_off.png"></span></div>
