--- a/template/engineering/homepage.html
+++ b/template/engineering/homepage.html
@@ -35,6 +35,7 @@
                         <option selected="selected"></option>
                         <option class="agila_option" >AGILA</option>
                         <option class="biplan_option" >BIPLAN</option>
+                        <option class="old_option">OLD</option>
                         <option>OTHER</option>
                     </select>
                 </span>
@@ -114,11 +115,13 @@ $( "#model_input_E" )
             $(".type_select").removeClass("hidden");
             $(".agila_option").attr('disabled', 'test');
             $(".biplan_option").removeAttr('disabled');
+            $(".old_option").removeAttr('disabled');
         }else{
             $(".type_select").addClass("hidden");
             $( "#type_choice" ).text("");
             $(".agila_option").attr('disabled', 'test');
             $(".biplan_option").attr('disabled');
+            $(".old_option").attr('disabled');
         }
         
     }
@@ -127,9 +130,11 @@ $( "#model_input_E" )
         if($("#family_choice").html().trim() == "OMEGA"){
             $(".agila_option").attr('disabled', 'test');
             $(".biplan_option").attr('disabled', 'test');
+            $(".old_option").attr('disabled', 'test');
         }else{
             $(".agila_option").removeAttr('disabled');
             $(".biplan_option").attr('disabled', 'test');
+            $(".old_option").attr('disabled', 'test');
         }
     }
   })
