--- a/template/engineering/toolbox.html
+++ b/template/engineering/toolbox.html
@@ -151,6 +151,7 @@
                 </div>
                 <div class="tssc hw_signals_container bloc_container_zone hidden">
                     <div class="name_container"><span class='name_signal'>TSSC HARDWARE SIGNALS (MASTER ONLY)</span></div>
+                    <div class="line_signal outCtStop"><span class='name_signal'>OUT_CONTACT_STOP</span> <span class="value"></span><span class="voyant"><img src="images/voyant_off.png"></span></div>
                     <div class="line_signal latSwitch"><span class='name_signal'>LATERAL_SW1</span> <span class="value"></span><span class="voyant"><img src="images/voyant_off.png"></span></div>
                     <div class="line_signal autoposDR"><span class='name_signal'>AUTO_POS_DR_REQ</span> <span class="value"></span><span class="voyant"><img src="images/voyant_off.png"></span></div>
                     <div class="line_signal globGantry"><span class='name_signal'>GLOBAL_GANTRY_ENABLE1</span> <span class="value"></span><span class="voyant"><img src="images/voyant_off.png"></span></div>
